--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        </div>
     </div>
 
-    <div class="row2">
+    <div class="row">
       <div class="col-4">
         <div class="box orange">4 columns</div>
        </div>
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="row3">
+    <div class="row">
       <div class="col-6">
         <div class="box orange">6 columns</div>
        </div>
@@ -50,7 +50,7 @@
       </div>
     </div>
     
-     <div class="row4">
+     <div class="row">
       <div class="col-12">
         <div class="box orange">12 columns</div>
        </div>
